gcc/testsuite/rust/compile/raw_identifiers_bad_keywords.rs
pub fn plus(n: i32, m: i32) -> i32 {
    r#crate /* { dg-error "forbidden raw identifier" } */
}
